crates/cli/src/snapshots/mltrs_cli__build_tasks__tests__generated_files@shaders__compiled__basic_triangle.json.snap
---
source: crates/cli/src/build_tasks.rs
info:
  relative_path: shaders/compiled/basic_triangle.json
---
{
  "sourceFileName": "basic_triangle.shader.slang",
  "globalParameters": [
    {
      "kind": "parameterBlock",
      "parameterName": "matrices",
      "elementType": {
        "typeName": "MVPMatrices",
        "fields": [
          {
            "kind": "matrix",
            "fieldName": "model",
            "binding": {
              "kind": "uniform",
              "offset": 0,
              "size": 64
            },
            "rowCount": 4,
            "columnCount": 4,
            "elementType": {
              "kind": "scalar",
              "scalarType": "float32"
            }
          },
          {
            "kind": "matrix",
            "fieldName": "view",
            "binding": {
              "kind": "uniform",
              "offset": 64,
              "size": 64
            },
            "rowCount": 4,
            "columnCount": 4,
            "elementType": {
              "kind": "scalar",
              "scalarType": "float32"
            }
          },
          {
            "kind": "matrix",
            "fieldName": "proj",
            "binding": {
              "kind": "uniform",
              "offset": 128,
              "size": 64
            },
            "rowCount": 4,
            "columnCount": 4,
            "elementType": {
              "kind": "scalar",
              "scalarType": "float32"
            }
          }
        ]
      }
    }
  ],
  "vertexEntryPoint": {
    "entryPointName": "vertexMain",
    "stage": "vertex",
    "parameters": [
      {
        "kind": "struct",
        "parameterName": "vertex",
        "binding": {
          "kind": "varyingInput",
          "index": 0,
          "count": 2
        },
        "typeName": "Vertex",
        "fields": [
          {
            "kind": "vector",
            "fieldName": "position",
            "binding": {
              "kind": "varyingInput",
              "index": 0,
              "count": 1
            },
            "elementCount": 3,
            "elementType": {
              "kind": "scalar",
              "scalarType": "float32"
            }
          },
          {
            "kind": "vector",
            "fieldName": "color",
            "binding": {
              "kind": "varyingInput",
              "index": 1,
              "count": 1
            },
            "elementCount": 3,
            "elementType": {
              "kind": "scalar",
              "scalarType": "float32"
            }
          }
        ]
      }
    ]
  },
  "fragmentEntryPoint": {
    "entryPointName": "fragmentMain",
    "stage": "fragment",
    "parameters": [
      {
        "kind": "struct",
        "parameterName": "fragVertex",
        "binding": {
          "kind": "varyingInput",
          "index": 0,
          "count": 1
        },
        "typeName": "FragInput",
        "fields": [
          {
            "kind": "vector",
            "fieldName": "position",
            "semanticName": "SV_POSITION",
            "elementCount": 4,
            "elementType": {
              "kind": "scalar",
              "scalarType": "float32"
            }
          },
          {
            "kind": "vector",
            "fieldName": "color",
            "binding": {
              "kind": "varyingInput",
              "index": 0,
              "count": 1
            },
            "elementCount": 3,
            "elementType": {
              "kind": "scalar",
              "scalarType": "float32"
            }
          }
        ]
      }
    ]
  },
  "pipelineLayout": {
    "descriptorSetLayouts": [
      {
        "bindingRanges": [
          {
            "binding": 0,
            "descriptorType": "constantBuffer",
            "descriptorCount": 1,
            "stageFlags": "all",
            "size": 192
          }
        ]
      }
    ],
    "pushConstantRanges": [],
    "bindlessHeapSet": null
  }
}
