crates/cli/src/snapshots/mltrs_cli__build_tasks__tests__generated_files@shaders__compiled__gpu_picking.json.snap
---
source: crates/cli/src/build_tasks.rs
info:
  relative_path: shaders/compiled/gpu_picking.json
---
{
  "sourceFileName": "gpu_picking.shader.slang",
  "globalParameters": [
    {
      "kind": "parameterBlock",
      "parameterName": "params",
      "elementType": {
        "typeName": "GpuPickingParams",
        "fields": [
          {
            "kind": "struct",
            "fieldName": "camera",
            "binding": {
              "kind": "uniform",
              "offset": 0,
              "size": 80
            },
            "structType": {
              "typeName": "RayMarchCamera",
              "fields": [
                {
                  "kind": "struct",
                  "fieldName": "inverseViewProj",
                  "binding": {
                    "kind": "uniform",
                    "offset": 0,
                    "size": 64
                  },
                  "structType": {
                    "typeName": "Projection",
                    "fields": [
                      {
                        "kind": "matrix",
                        "fieldName": "matrix",
                        "binding": {
                          "kind": "uniform",
                          "offset": 0,
                          "size": 64
                        },
                        "rowCount": 4,
                        "columnCount": 4,
                        "elementType": {
                          "kind": "scalar",
                          "scalarType": "float32"
                        }
                      }
                    ]
                  }
                },
                {
                  "kind": "vector",
                  "fieldName": "position",
                  "binding": {
                    "kind": "uniform",
                    "offset": 64,
                    "size": 12
                  },
                  "elementCount": 3,
                  "elementType": {
                    "kind": "scalar",
                    "scalarType": "float32"
                  }
                }
              ]
            }
          },
          {
            "kind": "scalar",
            "fieldName": "pickedObjectId",
            "binding": {
              "kind": "uniform",
              "offset": 80,
              "size": 4
            },
            "scalarType": "uint32"
          },
          {
            "kind": "scalar",
            "fieldName": "cubeCount",
            "binding": {
              "kind": "uniform",
              "offset": 84,
              "size": 4
            },
            "scalarType": "uint32"
          },
          {
            "kind": "pointer",
            "fieldName": "cubes",
            "binding": {
              "kind": "uniform",
              "offset": 88,
              "size": 8
            },
            "pointeeType": {
              "typeName": "Cube",
              "fields": [
                {
                  "kind": "vector",
                  "fieldName": "position",
                  "binding": {
                    "kind": "uniform",
                    "offset": 0,
                    "size": 12
                  },
                  "elementCount": 3,
                  "elementType": {
                    "kind": "scalar",
                    "scalarType": "float32"
                  }
                },
                {
                  "kind": "vector",
                  "fieldName": "radii",
                  "binding": {
                    "kind": "uniform",
                    "offset": 16,
                    "size": 12
                  },
                  "elementCount": 3,
                  "elementType": {
                    "kind": "scalar",
                    "scalarType": "float32"
                  }
                }
              ]
            },
            "pointeeSize": 32,
            "access": "read"
          }
        ]
      }
    }
  ],
  "vertexEntryPoint": {
    "entryPointName": "vertMain",
    "stage": "vertex",
    "parameters": [
      {
        "kind": "scalar",
        "parameterName": "id",
        "semanticName": "SV_VERTEXID",
        "scalarType": "uint32"
      }
    ]
  },
  "fragmentEntryPoint": {
    "entryPointName": "fragMain",
    "stage": "fragment",
    "parameters": [
      {
        "kind": "struct",
        "parameterName": "input",
        "binding": {
          "kind": "varyingInput",
          "index": 0,
          "count": 1
        },
        "typeName": "FragInput",
        "fields": [
          {
            "kind": "vector",
            "fieldName": "position",
            "semanticName": "SV_POSITION",
            "elementCount": 4,
            "elementType": {
              "kind": "scalar",
              "scalarType": "float32"
            }
          },
          {
            "kind": "vector",
            "fieldName": "centeredCoords",
            "binding": {
              "kind": "varyingInput",
              "index": 0,
              "count": 1
            },
            "elementCount": 2,
            "elementType": {
              "kind": "scalar",
              "scalarType": "float32"
            }
          }
        ]
      }
    ]
  },
  "pipelineLayout": {
    "descriptorSetLayouts": [
      {
        "bindingRanges": [
          {
            "binding": 0,
            "descriptorType": "constantBuffer",
            "descriptorCount": 1,
            "stageFlags": "all",
            "size": 96
          }
        ]
      }
    ],
    "pushConstantRanges": [],
    "bindlessHeapSet": null
  }
}
